@@ -66,7 +66,10 @@
               <imageName>${imageName}</imageName>
               <fallback>false</fallback>
               <buildArgs>
-                <arg>-H:+UnlockExperimentalVMOptions -H:DashboardDump=rucia -H:+DashboardAll</arg>
+                <arg>--enable-preview</arg>
+                <arg>-H:+UnlockExperimentalVMOptions</arg>
+                <arg>-H:DashboardDump=${project.build.directory}/dashboard</arg>
+                <arg>-H:+DashboardAll</arg>
               </buildArgs>
               <agent>
                 <enabled>true</enabled>
